--- a/Home Assignment 7/OReL HA7 Davide Marchi.tex
+++ b/Home Assignment 7/OReL HA7 Davide Marchi.tex
@@ -60,7 +60,7 @@
 
 
 \section{Short Questions}
-%\input{1.tex}
+\input{1.tex}
 
 \section{Offline Evaluation of Bandit Algorithms - the Practical Part}
 %\input{2.tex}
