--- a/Home Assignment 7/OReL HA7 Davide Marchi.tex
+++ b/Home Assignment 7/OReL HA7 Davide Marchi.tex
@@ -66,7 +66,7 @@
 %\input{2.tex}
 
 \section{Grid-World: Continual and undiscounted}
-%\input{3.tex}
+\input{3.tex}
 
 \section{An Empirical Evaluation of UCB Q-learning}
 %\input{4.tex}
