--- a/Home Assignment 7/OReL HA7 Davide Marchi.tex
+++ b/Home Assignment 7/OReL HA7 Davide Marchi.tex
@@ -69,7 +69,7 @@
 \input{3.tex}
 
 \section{An Empirical Evaluation of UCB Q-learning}
-%\input{4.tex}
+\input{4.tex}
 
     
 \bibliography{bibliography}  % If you have some references, use BibTeX
