New graphs (20) and made 2.1

--- a/Home Assignment 7/OReL HA7 Davide Marchi.tex
+++ b/Home Assignment 7/OReL HA7 Davide Marchi.tex
@@ -63,7 +63,7 @@
 \input{1.tex}
 
 \section{Offline Evaluation of Bandit Algorithms - the Practical Part}
-%\input{2.tex}
+\input{2.tex}
 
 \section{Grid-World: Continual and undiscounted}
 \input{3.tex}
