--- a/Home Assignment 7/OReL HA7 Davide Marchi.tex
+++ b/Home Assignment 7/OReL HA7 Davide Marchi.tex
@@ -59,17 +59,17 @@
 
 
 
-%\section{Short Questions}
-%\input{1.tex}
+\section{Short Questions}
+\input{1.tex}
 
 \section{Offline Evaluation of Bandit Algorithms - the Practical Part}
 \input{2.tex}
 
-%\section{Grid-World: Continual and undiscounted}
-%\input{3.tex}
+\section{Grid-World: Continual and undiscounted}
+\input{3.tex}
 
-%\section{An Empirical Evaluation of UCB Q-learning}
-%\input{4.tex}
+\section{An Empirical Evaluation of UCB Q-learning}
+\input{4.tex}
 
     
 \bibliography{bibliography}  % If you have some references, use BibTeX
