--- a/Home Assignment 8/OReL HA8 Davide Marchi.tex
+++ b/Home Assignment 8/OReL HA8 Davide Marchi.tex
@@ -60,7 +60,7 @@
 
 
 \section{MDP Classes}
-%\input{1.tex}
+\input{1.tex}
 
 \section{Infinitely Many Choices for Optimal Bias in Average-Reward MDPs}
 %\input{2.tex}
