--- a/Home Assignment 8/OReL HA8 Davide Marchi.tex
+++ b/Home Assignment 8/OReL HA8 Davide Marchi.tex
@@ -63,7 +63,7 @@
 \input{1.tex}
 
 \section{Infinitely Many Choices for Optimal Bias in Average-Reward MDPs}
-%\input{2.tex}
+\input{2.tex}
 
 \section{Comparison between UCRL2 and UCRL2-L}
 %\input{3.tex}
