Modified code snippet ex 3

--- a/Home Assignment 8/OReL HA8 Davide Marchi.tex
+++ b/Home Assignment 8/OReL HA8 Davide Marchi.tex
@@ -66,7 +66,7 @@
 \input{2.tex}
 
 \section{Comparison between UCRL2 and UCRL2-L}
-%\input{3.tex}
+\input{3.tex}
 
 \section{Leveraging Prior Knowledge on the Graph of MDP to Reduce Regret}
 %\input{4.tex}
