--- a/Home Assignment 8/OReL HA8 Davide Marchi.tex
+++ b/Home Assignment 8/OReL HA8 Davide Marchi.tex
@@ -69,7 +69,7 @@
 \input{3.tex}
 
 \section{Leveraging Prior Knowledge on the Graph of MDP to Reduce Regret}
-%\input{4.tex}
+\input{4.tex}
 
     
 \bibliography{bibliography}  % If you have some references, use BibTeX
