Removed ex 4. Too wrong

--- a/Home Assignment 8/1.tex
+++ b/Home Assignment 8/1.tex
@@ -1,4 +1,4 @@
-In this exercise we classify three MDPs---\textbf{RiverSwim}, \textbf{RiverSwim-2} (a modified version of RiverSwim), and the \textbf{4-room grid-world}---according to the following classes:
+In this exercise we classify three MDPs,\textbf{RiverSwim}, \textbf{RiverSwim-2} (a modified version of RiverSwim), and the \textbf{4-room grid-world}, according to the following classes:
 \begin{itemize}
     \item \textbf{Ergodic MDPs}: Every stationary policy induces a Markov chain that has a unique recurrent class (i.e., it is a unichain).
     \item \textbf{Communicating MDPs}: For every pair of states $s, s' \in \mathcal{S}$, there exists some policy under which $s'$ is reachable from $s$ (and vice versa).
